Updated CleanupCurrentFlagEventProcessorImpl to take into account events with the same Ids but different hearings